--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inventive Onelife Accessoires</title>
 
     <!-- font link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,15 +17,16 @@
 </head>
 <body>
     
-
     <!-- header -->
     <header>
 
-        <a href="#" class="logo"><i class="picture"></i></a>
+        <a href="#home" class="logo"><img src="images/l4.png" alt=""></a>
+
+        <div id="menu" class="fas fa-bars"></div>
 
         <nav class="navbar">
             <ul>
-                <li><a href="#home">home</a></li>
+                <li><a class="active" href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
                 <li><a href="#features">features</a></li>
                 <li><a href="#contact">contact</a></li>
@@ -34,6 +35,7 @@
         </nav>
 
     </header>
+
 
 
 
