--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header>
 
-        <a href="#home" class="logo"><img src="images/l4.png" alt=""></a>
+        <a href="#home" class="logo">Inventive Onelife Accessoires</a>
 
         <div id="menu" class="fas fa-bars"></div>
 
