--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- css link -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- icon link -->
+    <link rel = "icon" href = "images/l4.png" type = "image/x-icon">
 
 </head>
 <body>
     
-    <!-- header -->
+    <!-- header section -->
     <header>
 
         <a href="#home" class="logo">Inventive Onelife Accessoires</a>
@@ -35,6 +37,70 @@
         </nav>
 
     </header>
+
+    <!-- home section -->
+    <section class="home" id="home">
+
+        <div class="content">
+            <h1>Unsere Innovative und neuen Produkte</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur praesentium doloremque est tenetur laudantium nam quae expedita excepturi, deleniti error. Unde facere ex voluptates porro possimus tenetur ab! Quasi, vel!</p>
+            <a href="#"><button class="btn">Jetzt Bestellen</button></a>
+        </div>
+        <div class="image">
+            <img src="images/l4.png" alt="">
+        </div>
+    </section>
+
+    <!-- about section -->
+    <section class="about" id="about">
+
+        <div class="image">
+            <img src="images/coming-soon.png" alt="">
+        </div>
+
+        <div class="content">
+            <h1 class="heading">Über unsere Produkte</h1>
+            <h3>Lebe einen neuen Lifestyle</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quas amet. Doloribus eveniet repellendus laudantium veniam, ullam numquam sit aliquam officia maxime. Excepturi ratione illo at beatae eaque perspiciatis vel!</p>
+            <ul>
+                <li> <i class="fas fa-check-double"></i>text</li>
+                <li> <i class="fas fa-check-double"></i>text</li>
+                <li> <i class="fas fa-check-double"></i>text</li>
+                <li> <i class="fas fa-check-double"></i>text</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- features section -->
+    <section class="features" id="features">
+        <h1 class="heading">Produkt Funktionen</h1>
+        <h1 class="title">Neue Features</h1>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus. Asperiores laudantium ducimus modi officia harum dolores quod praesentium debitis doloremque. Placeat corporis ratione, ea expedita earum deleniti officiis. Architecto.</p>
+
+        <div class="box-container">
+            <div class="box">
+                <i class="fas fa-mobile-alt"></i>
+                <h3>Verbindung mit unserer APP</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+            </div>
+            <div class="box">
+                <i class="fas fa-map-marker-alt"></i>
+                <h3>GPS Funktion</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+            </div>
+            <div class="box">
+                <i class="fas fa-hands-helping"></i>
+                <h3>SOS Notruf</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+            </div>
+            <div class="box">
+                <i class="fab fa-apple-pay"></i>
+                <h3>NFC Mobile Payment</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+            </div>
+
+        </div>
+    </section>
 
 
 
