--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
     
     <!-- header section -->
     <header>
-
         <a href="#home" class="logo">Inventive Onelife Accessoires</a>
 
         <div id="menu" class="fas fa-bars"></div>
-
         <nav class="navbar">
             <ul>
                 <li><a class="active" href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
                 <li><a href="#features">features</a></li>
-                <li><a href="#contact">contact</a></li>
-                <li><a href="#faq">faq</a></li>
+                <li><a href="#product">Produkte</a></li>
+                <li><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
-
     </header>
 
     <!-- home section -->
@@ -73,8 +70,8 @@
 
     <!-- features section -->
     <section class="features" id="features">
-        <h1 class="heading">Produkt Funktionen</h1>
-        <h1 class="title">Neue Features</h1>
+        <h1 class="heading">Accessoires Funktionen</h1>
+        <h1 class="title">Features</h1>
         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus. Asperiores laudantium ducimus modi officia harum dolores quod praesentium debitis doloremque. Placeat corporis ratione, ea expedita earum deleniti officiis. Architecto.</p>
 
         <div class="box-container">
@@ -98,10 +95,106 @@
                 <h3>NFC Mobile Payment</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
             </div>
-
         </div>
     </section>
 
+    <!-- product section -->
+    <section class="product" id="product">
+        <h1 class="heading">Produkte</h1>
+        <h1 class="title">Unsere neuesten Produkte</h1>
+
+        <div class="box-container">
+            <div class="box">
+                <h3>Armbänder</h3>
+                <img src="images/coming-soon.png" alt="">
+                <span class="price">50€</span>
+                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+            </div>
+            <div class="box">
+                <h3>Ringe</h3>
+                <img src="images/coming-soon.png" alt="">
+                <span class="price">50€</span>
+                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+            </div>
+            <div class="box">
+                <h3>Ketten</h3>
+                <img src="images/coming-soon.png" alt="">
+                <span class="price">50€</span>
+                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+            </div>
+            <div class="box">
+                <h3>Ohrringe</h3>
+                <img src="images/coming-soon.png" alt="">
+                <span class="price">50€</span>
+                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- faq section -->
+
+    <section class="faq" id="faq">
+
+        <h1 class="heading">FAQ</h1>
+        <h1 class="title">häufig gestellte fragen</h1>
+        <div class="row">
+            <div class="image">
+                <img src="images/Questions-bro.svg" alt="">
+            </div>
+            <div class="accordion-container">
+
+                <div class="accordion">
+                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                </div>
+                <div class="accordion">
+                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                </div>
+                <div class="accordion">
+                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                </div>
+                <div class="accordion">
+                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                </div>
+                <div class="accordion">
+                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
+                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                </div>
+                
+            </div>
+        </div>
+
+    </section>
+
+    <!-- footer -->
+
+    <secttion class="footer">
+        <div class="box-container">
+            <div class="box">
+                <h3>Warum wir?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="box">
+                <h3>Links</h3>
+                <a href="#home">home</a>
+                <a href="#about">about</a>
+                <a href="#features">features</a>
+                <a href="#product">products</a>
+                <a href="#faq">faq</a>
+            </div>
+            <div class="box">
+                <h3>Kontaktiere uns</h3>
+                <p> <i class="fas fa-map-marker alt">adresse</i></p>
+                <p> <i class="fas fa-globe"></i>website</p>
+                <p> <i class="fas fa-phone"></i>number</p>
+            </div>
+        </div>
+
+        <h1 class="credit">Copyright © 2022 Inventive Onelife Accessoires OG| createt by <a href="#">Adrian Saffarnia</a> | all rights reserved.</h1>
+    </secttion>
 
 
 
