--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- icon link -->
     <link rel = "icon" href = "images/l4.png" type = "image/x-icon">
-
 </head>
+
 <body>
     
     <!-- header section -->
@@ -41,7 +41,7 @@
         <div class="content">
             <h1>Unsere Innovative und neuen Produkte</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur praesentium doloremque est tenetur laudantium nam quae expedita excepturi, deleniti error. Unde facere ex voluptates porro possimus tenetur ab! Quasi, vel!</p>
-            <a href="#"><button class="btn">Jetzt Bestellen</button></a>
+            <a href="shop.html"><button class="btn">Jetzt Bestellen</button></a>
         </div>
         <div class="image">
             <img src="images/l4.png" alt="">
@@ -108,25 +108,25 @@
                 <h3>Armbänder</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">50€</span>
-                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>Ringe</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">50€</span>
-                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>Ketten</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">50€</span>
-                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>Ohrringe</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">50€</span>
-                <a href="#"><button class="btn">Jetzt kaufen</button></a>
+                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
         </div>
     </section>
@@ -167,11 +167,145 @@
             </div>
         </div>
 
+    <!-- comment section -->
+
+    <section class="comment">
+        <h1 class="heading">Bewertungen</h1>
+        <h1 class="title">Bewertungen</h1>
+        <!--Testimonials------------------->
+        <div id="testimonials">
+            <!--heading--->
+            <div class="testimonial-heading">
+            </div>
+            <!--testimonials-box-container------>
+            <div class="testimonial-box-container">
+                <!--BOX-1-------------->
+                <div class="testimonial-box">
+                    <!--top------------------------->
+                    <div class="box-top">
+                        <!--profile----->
+                        <div class="profile">
+                            <!--img---->
+                            <div class="profile-img">
+                                <img src="images/c-1.jpg" />
+                            </div>
+                            <!--name-and-username-->
+                            <div class="name-user">
+                                <strong>Touseeq Ijaz</strong>
+                                <span>@touseeqijazweb</span>
+                            </div>
+                        </div>
+                        <!--reviews------>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i><!--Empty star-->
+                        </div>
+                    </div>
+                    <!--Comments---------------------------------------->
+                    <div class="client-comment">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                    </div>
+                </div>
+                <!--BOX-2-------------->
+                <div class="testimonial-box">
+                    <!--top------------------------->
+                    <div class="box-top">
+                        <!--profile----->
+                        <div class="profile">
+                            <!--img---->
+                            <div class="profile-img">
+                                <img src="images/c-2.jpg" />
+                            </div>
+                            <!--name-and-username-->
+                            <div class="name-user">
+                                <strong>J.K Rowling</strong>
+                                <span>@jkrowling</span>
+                            </div>
+                        </div>
+                        <!--reviews------>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i><!--Empty star-->
+                        </div>
+                    </div>
+                    <!--Comments---------------------------------------->
+                    <div class="client-comment">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                    </div>
+                </div>
+                <!--BOX-3-------------->
+                <div class="testimonial-box">
+                    <!--top------------------------->
+                    <div class="box-top">
+                        <!--profile----->
+                        <div class="profile">
+                            <!--img---->
+                            <div class="profile-img">
+                                <img src="images/c-3.jpg" />
+                            </div>
+                            <!--name-and-username-->
+                            <div class="name-user">
+                                <strong>Harry Potter</strong>
+                                <span>@DanielRedclief</span>
+                            </div>
+                        </div>
+                        <!--reviews------>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i><!--Empty star-->
+                        </div>
+                    </div>
+                    <!--Comments---------------------------------------->
+                    <div class="client-comment">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                    </div>
+                </div>
+                <!--BOX-4-------------->
+                <div class="testimonial-box">
+                    <!--top------------------------->
+                    <div class="box-top">
+                        <!--profile----->
+                        <div class="profile">
+                            <!--img---->
+                            <div class="profile-img">
+                                <img src="images/c-4.jpg" />
+                            </div>
+                            <!--name-and-username-->
+                            <div class="name-user">
+                                <strong>Oliva</strong>
+                                <span>@Olivaadward</span>
+                            </div>
+                        </div>
+                        <!--reviews------>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i><!--Empty star-->
+                        </div>
+                    </div>
+                    <!--Comments---------------------------------------->
+                    <div class="client-comment">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- footer -->
 
-    <secttion class="footer">
+    <section class="footer">
         <div class="box-container">
             <div class="box">
                 <h3>Warum wir?</h3>
@@ -189,11 +323,11 @@
                 <h3>Kontaktiere uns</h3>
                 <p> <i class="fas fa-map-marker alt">adresse</i></p>
                 <p> <i class="fas fa-globe"></i>website</p>
-                <p> <i class="fas fa-phone"></i>number</p>
+                <p> <i class="fas fa-phone"></i>nummer</p>
             </div>
         </div>
 
-        <h1 class="credit">Copyright © 2022 Inventive Onelife Accessoires OG| createt by <a href="#">Adrian Saffarnia</a> | all rights reserved.</h1>
+        <h1 class="credit">© Copyright 2022 - Inventive Onelife Accessoires OG | createt by Adrian Saffarnia | all rights reserved.</h1>
     </secttion>
 
 
