--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a class="active" href="#home">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#features">features</a></li>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#features">Features</a></li>
                 <li><a href="#product">Produkte</a></li>
                 <li><a href="#faq">FAQ</a></li>
             </ul>
@@ -39,8 +39,9 @@
     <section class="home" id="home">
 
         <div class="content">
-            <h1>Unsere Innovative und neuen Produkte</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur praesentium doloremque est tenetur laudantium nam quae expedita excepturi, deleniti error. Unde facere ex voluptates porro possimus tenetur ab! Quasi, vel!</p>
+            <h1>IOA - Smarte Accessoires und Schmuckstück</h1>
+            <p>Unsere Geschäftsidee soll es Menschen wesentlich erleichtern, sich im Internet zu vernetzen, um Freunde und Partner kennen zu lernen.  
+                Es ist uns auch sehr wichtig in Notfallsituationen schnell und rechtzeitig Notfallsignale aussenden zu können, damit man auch zur richtigen Zeit Hilfe bekommen kann.</p>
             <a href="shop.html"><button class="btn">Jetzt Bestellen</button></a>
         </div>
         <div class="image">
@@ -58,12 +59,13 @@
         <div class="content">
             <h1 class="heading">Über unsere Produkte</h1>
             <h3>Lebe einen neuen Lifestyle</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quas amet. Doloribus eveniet repellendus laudantium veniam, ullam numquam sit aliquam officia maxime. Excepturi ratione illo at beatae eaque perspiciatis vel!</p>
+            <p>Durch die App können auch leichter Freundschaften und/oder Beziehungen eingegangen werden. 
+                Indem man in der App die dazugehörige Funktion einschaltet, kann man Daten zu anderen Besitzern finden, die auch dieses Feature eingeschaltet haben und auch unsere Schmuckstücke und/oder Accessoires besitzen. </p>
             <ul>
-                <li> <i class="fas fa-check-double"></i>text</li>
-                <li> <i class="fas fa-check-double"></i>text</li>
-                <li> <i class="fas fa-check-double"></i>text</li>
-                <li> <i class="fas fa-check-double"></i>text</li>
+                <li> <i class="fas fa-check-double"></i> Moderner Style</li>
+                <li> <i class="fas fa-check-double"></i> Flexibilität</li>
+                <li> <i class="fas fa-check-double"></i> Technisch fortgeschhritten</li>
+                <li> <i class="fas fa-check-double"></i> hoher Datenschutz</li>
             </ul>
         </div>
     </section>
@@ -72,28 +74,33 @@
     <section class="features" id="features">
         <h1 class="heading">Accessoires Funktionen</h1>
         <h1 class="title">Features</h1>
-        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus. Asperiores laudantium ducimus modi officia harum dolores quod praesentium debitis doloremque. Placeat corporis ratione, ea expedita earum deleniti officiis. Architecto.</p>
-
+        <p class="description">Wir bieten Ihnen Accessoires und Schmuckstücke mit Features wie zum Beispiel S.O.S.-Funktion oder GPS-Tracking an. 
+            Das funktioniert ganz einfach und unauffällig durch einen Knopfdruck am Accessoire oder Schmuckstück. 
+            Außerdem inkludieren Armbänder auch eine Near Field Communication. 
+            Das Schmuckstück ermöglicht es auch eine Verbindung zu unserer dazugehörigen App herzustellen, um auf weitere Features zugreifen zu können. </p>
         <div class="box-container">
             <div class="box">
                 <i class="fas fa-mobile-alt"></i>
                 <h3>Verbindung mit unserer APP</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+                <p>Das Schmuckstück ermöglicht es auch eine Verbindung zu unserer dazugehörigen App herzustellen. 
+                    Durch die App können auch leichter Freundschaften und/oder Beziehungen eingegangen werden.</p>               
             </div>
             <div class="box">
                 <i class="fas fa-map-marker-alt"></i>
                 <h3>GPS Funktion</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+                <p>Durch dieses Feature ist es möglich das Schmuckstück zu orten. 
+                    Beispielsweise ist das für Eltern sinnvoll, falls sie wissen wollen wo sich ihr Kind befindet.</p>               
             </div>
             <div class="box">
                 <i class="fas fa-hands-helping"></i>
                 <h3>SOS Notruf</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+                <p>Durch diese Funktion kann in Notfallsituationen rechtzeitig der Standort an Rettungsdienste oder Notfallkontakte gesendet werden. 
+                    Das funktioniert ganz einfach und unauffällig durch einen Knopfdruck am Schmuckstück.</p>               
             </div>
             <div class="box">
                 <i class="fab fa-apple-pay"></i>
                 <h3>NFC Mobile Payment</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae magni totam quaerat aliquid, facilis, libero unde at temporibus qui voluptatibus vel corrupti obcaecati dolorem commodi facere doloribus dolor molestias dicta.</p>               
+                <p>Dieses Feature macht es möglich ohne Handy, Bankomat-/ Kreditkarte oder Bargeld einkaufen zu gehen</p>               
             </div>
         </div>
     </section>
@@ -107,25 +114,25 @@
             <div class="box">
                 <h3>Armbänder</h3>
                 <img src="images/coming-soon.png" alt="">
-                <span class="price">50€</span>
+                <span class="price">€ 49,99 </span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
-                <h3>Ringe</h3>
+                <h3>Halsketten</h3>
                 <img src="images/coming-soon.png" alt="">
-                <span class="price">50€</span>
-                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
-            </div>
-            <div class="box">
-                <h3>Ketten</h3>
-                <img src="images/coming-soon.png" alt="">
-                <span class="price">50€</span>
+                <span class="price">€ 49,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>Ohrringe</h3>
                 <img src="images/coming-soon.png" alt="">
-                <span class="price">50€</span>
+                <span class="price">€ 39,99</span>
+                <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
+            </div>
+            <div class="box">
+                <h3>Ringe</h3>
+                <img src="images/coming-soon.png" alt="">
+                <span class="price">€ 39,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
         </div>
@@ -171,28 +178,25 @@
 
     <section class="comment">
         <h1 class="heading">Bewertungen</h1>
-        <h1 class="title">Bewertungen</h1>
-        <!--Testimonials------------------->
+        <h1 class="title">Kunden erfahrung</h1>
+        <!-- comment box -->
         <div id="testimonials">
-            <!--heading--->
             <div class="testimonial-heading">
             </div>
-            <!--testimonials-box-container------>
             <div class="testimonial-box-container">
-                <!--BOX-1-------------->
+                <!-- box 1 -->
                 <div class="testimonial-box">
-                    <!--top------------------------->
                     <div class="box-top">
                         <!--profile----->
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/c-1.jpg" />
+                                <img src="images/coming.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>Touseeq Ijaz</strong>
-                                <span>@touseeqijazweb</span>
+                                <strong>name</strong>
+                                <span>@name</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -204,7 +208,7 @@
                             <i class="far fa-star"></i><!--Empty star-->
                         </div>
                     </div>
-                    <!--Comments---------------------------------------->
+                    <!--Comments-->
                     <div class="client-comment">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
                     </div>
@@ -217,12 +221,12 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/c-2.jpg" />
+                                <img src="images/coming.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>J.K Rowling</strong>
-                                <span>@jkrowling</span>
+                                <strong>name</strong>
+                                <span>@username</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -247,12 +251,12 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/c-3.jpg" />
+                                <img src="images/coming.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>Harry Potter</strong>
-                                <span>@DanielRedclief</span>
+                                <strong>name</strong>
+                                <span>@username</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -277,12 +281,12 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/c-4.jpg" />
+                                <img src="images/coming.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>Oliva</strong>
-                                <span>@Olivaadward</span>
+                                <strong>Name</strong>
+                                <span>@username</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -291,7 +295,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i><!--Empty star-->
+                            <i class="fas fa-star"></i><!--Empty star-->
                         </div>
                     </div>
                     <!--Comments---------------------------------------->
@@ -309,21 +313,21 @@
         <div class="box-container">
             <div class="box">
                 <h3>Warum wir?</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Unser Wettbewerbsvorteil besteht darin, dass wir Accessoires und Schmuckstücke mit Features wie GPS-Tracking, S.O.S-Funktion, Inventive-Onelife-Dating und Near Field Communication anbieten. 
+
+                    Kunden und Kundinnen konsumieren bei uns, da wir Accessoires und Schmuckstücke mit Technik kombinieren. </p>
             </div>
             <div class="box">
                 <h3>Links</h3>
-                <a href="#home">home</a>
-                <a href="#about">about</a>
-                <a href="#features">features</a>
-                <a href="#product">products</a>
-                <a href="#faq">faq</a>
+                <a href="shop.html">Online Shop</a>
+                <a href="#">Social Media</a>
+                <a href="#">Impressum</a>
             </div>
             <div class="box">
                 <h3>Kontaktiere uns</h3>
-                <p> <i class="fas fa-map-marker alt">adresse</i></p>
-                <p> <i class="fas fa-globe"></i>website</p>
-                <p> <i class="fas fa-phone"></i>nummer</p>
+                <p> <i class="fas fa-map-marker alt"></i> Maria-Theresien-Gasse 25</p>
+                <p> <i class="fas fa-globe"></i>www.ioa.com</p>
+                <p> <i class="fas fa-phone"></i>+43 2236 222 89</p>
             </div>
         </div>
 
