--- a/shop.html
+++ b/shop.html
@@ -27,7 +27,7 @@
         </header>
 
             <!-- home section -->
-    <section class="home" id="home">
+    <section class="home" id="home" style="background-color: #333;">
 
         <div class="content">
             <h1>Der Online Shop ist momentan in Wartungsarbeiten</h1>
@@ -35,6 +35,11 @@
         </div>
         </div>
     </section>
+
+
+
+<!-- js link -->
+<script src="js/main.js"></script>
     
 </body>
 </html>
