--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="about" id="about">
 
         <div class="image">
-            <img src="images/coming-soon.png" alt="">
+            <img src="images/img1.jpg" alt="">
         </div>
 
         <div class="content">
@@ -112,27 +112,27 @@
 
         <div class="box-container">
             <div class="box">
-                <h3>Armbänder</h3>
+                <h3>IOA BRACELET A3</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">€ 49,99 </span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
-                <h3>Halsketten</h3>
+                <h3>IOA BRACELET A3 PRO</h3>
                 <img src="images/coming-soon.png" alt="">
-                <span class="price">€ 49,99</span>
+                <span class="price">€ 59,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
-                <h3>Ohrringe</h3>
+                <h3>IOA RING A6</h3>
                 <img src="images/coming-soon.png" alt="">
                 <span class="price">€ 39,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
-                <h3>Ringe</h3>
+                <h3>IOA SKIN 1 GOLD</h3>
                 <img src="images/coming-soon.png" alt="">
-                <span class="price">€ 39,99</span>
+                <span class="price">€ 4,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
         </div>
@@ -151,24 +151,24 @@
             <div class="accordion-container">
 
                 <div class="accordion">
-                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                    <h1 class="accordion-heading">Sind meine Daten sicher?</h1>
+                    <p class="accordion-content">In der App muss ein Konto erstellt und Daten eingegeben werden, welche nur mit Bestätigung freigegeben werden, da wir sehr auf Datenschutz achten. So werden keine Daten ohne Zustimmung weitergegeben</p>
                 </div>
                 <div class="accordion">
-                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                    <h1 class="accordion-heading">Wie lange dauert die Lieferung und kann ich das Produkt zurücksenden?</h1>
+                    <p class="accordion-content">Wir versuchen eine langfristige Kooperation mit der Post AG einzugehen, um unseren Kunden die Versandkosten und Lieferzeiten möglichst niedrig zu halten. Diese betragen dann 1-4 Tage. Jedes Produkt kann nach 14 Tagen Zurückgesendet werden</p>
                 </div>
                 <div class="accordion">
-                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                    <h1 class="accordion-heading">Welche Methoden kann ich zum Kontaktlosen Zahlen verwenden?</h1>
+                    <p class="accordion-content">Wenn man kontaktloses Zahlen verwenden will, muss man seine Bankdaten in der App im Benutzerkonto eintragen. Diese werden an das Armband gesendet. Verfügbare Zahlungsmethoden: Kredit- Debitkarte, VISA, PayPal, Crypto wallet und Telefonanbieter.</p>
                 </div>
                 <div class="accordion">
-                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                    <h1 class="accordion-heading">Wie kann ich den Skin ausstauschen?</h1>
+                    <p class="accordion-content">Unser Top Feature ist der Austausch des „Skins“ des Accessoires. Das Bedeutet es gibt die möglich zusätzlich zu den mit „Pro“ gekennzeichneten Produkten in unserem Sortiment verschiedene Farben/Materialen/Muster für das Schmuckstück zu erwerben, welche man ganz einfach mit dem mitgelieferten „Basicskin“ austauschen kann. Falls es schwierigkeiten gibt, lesen Sie bitte die Gebrauchsanweisung</p>
                 </div>
                 <div class="accordion">
-                    <h1 class="accordion-heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-                    <p class="accordion-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi reiciendis sapiente eius consequuntur magni ea et praesentium, obcaecati molestiae ratione voluptates officiis nostrum voluptatibus nesciunt! Nisi reprehenderit veritatis quod!</p>
+                    <h1 class="accordion-heading">Wie erhaltet das Schmückstück Informationen?</h1>
+                    <p class="accordion-content">Das Schmuckstück verfügt über eine Bluetooth Verbindung, mit der es sich mit der App verbinden kann. Dort können auch weitere Funktionen verwaltet werden wie zum Beispiel die Anpassung des Knopfes (Standardbelegung: gedrückt halten: ein-ausschalten, 3-mal drücken: SOS). </p>
                 </div>
                 
             </div>
@@ -195,8 +195,8 @@
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>name</strong>
-                                <span>@name</span>
+                                <strong>Manuel Karl</strong>
+                                <span>@Koarl187</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -210,7 +210,7 @@
                     </div>
                     <!--Comments-->
                     <div class="client-comment">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                        <p>Das Armband hat eine sehr gute Qualität und ich würde das Produkt jedem weiterempfehlen!</p>
                     </div>
                 </div>
                 <!--BOX-2-------------->
