--- a/index.html
+++ b/index.html
@@ -108,30 +108,30 @@
     <!-- product section -->
     <section class="product" id="product">
         <h1 class="heading">Produkte</h1>
-        <h1 class="title">Unsere neuesten Produkte</h1>
+        <h1 class="title">Unsere TOP Produkte</h1>
 
         <div class="box-container">
             <div class="box">
                 <h3>IOA BRACELET A3</h3>
-                <img src="images/coming-soon.png" alt="">
+                <img src="images/a2.jpg" alt="">
                 <span class="price">€ 49,99 </span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>IOA BRACELET A3 PRO</h3>
-                <img src="images/coming-soon.png" alt="">
+                <img src="images/a2.jpg" alt="">
                 <span class="price">€ 59,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>IOA RING A6</h3>
-                <img src="images/coming-soon.png" alt="">
+                <img src="images/a3.jpg" alt="">
                 <span class="price">€ 39,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
             <div class="box">
                 <h3>IOA SKIN 1 GOLD</h3>
-                <img src="images/coming-soon.png" alt="">
+                <img src="images/a4.png" alt="">
                 <span class="price">€ 4,99</span>
                 <a href="shop.html"><button class="btn">Jetzt kaufen</button></a>
             </div>
@@ -151,6 +151,10 @@
             <div class="accordion-container">
 
                 <div class="accordion">
+                    <h1 class="accordion-heading">Wie erhaltet das Schmückstück Informationen?</h1>
+                    <p class="accordion-content">Das Schmuckstück verfügt über eine Bluetooth Verbindung, mit der es sich mit der App verbinden kann. Dort können auch weitere Funktionen verwaltet werden wie zum Beispiel die Anpassung des Knopfes (Standardbelegung: gedrückt halten: ein-ausschalten, 3-mal drücken: SOS). </p>
+                </div>
+                <div class="accordion">
                     <h1 class="accordion-heading">Sind meine Daten sicher?</h1>
                     <p class="accordion-content">In der App muss ein Konto erstellt und Daten eingegeben werden, welche nur mit Bestätigung freigegeben werden, da wir sehr auf Datenschutz achten. So werden keine Daten ohne Zustimmung weitergegeben</p>
                 </div>
@@ -166,10 +170,6 @@
                     <h1 class="accordion-heading">Wie kann ich den Skin ausstauschen?</h1>
                     <p class="accordion-content">Unser Top Feature ist der Austausch des „Skins“ des Accessoires. Das Bedeutet es gibt die möglich zusätzlich zu den mit „Pro“ gekennzeichneten Produkten in unserem Sortiment verschiedene Farben/Materialen/Muster für das Schmuckstück zu erwerben, welche man ganz einfach mit dem mitgelieferten „Basicskin“ austauschen kann. Falls es schwierigkeiten gibt, lesen Sie bitte die Gebrauchsanweisung</p>
                 </div>
-                <div class="accordion">
-                    <h1 class="accordion-heading">Wie erhaltet das Schmückstück Informationen?</h1>
-                    <p class="accordion-content">Das Schmuckstück verfügt über eine Bluetooth Verbindung, mit der es sich mit der App verbinden kann. Dort können auch weitere Funktionen verwaltet werden wie zum Beispiel die Anpassung des Knopfes (Standardbelegung: gedrückt halten: ein-ausschalten, 3-mal drücken: SOS). </p>
-                </div>
                 
             </div>
         </div>
@@ -178,7 +178,7 @@
 
     <section class="comment">
         <h1 class="heading">Bewertungen</h1>
-        <h1 class="title">Kunden erfahrung</h1>
+        <h1 class="title">Kunden Erfahrungen</h1>
         <!-- comment box -->
         <div id="testimonials">
             <div class="testimonial-heading">
@@ -191,11 +191,11 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/coming.jpg" />
+                                <img src="images/p1.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>Manuel Karl</strong>
+                                <strong>Manuel</strong>
                                 <span>@Koarl187</span>
                             </div>
                         </div>
@@ -205,7 +205,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i><!--Empty star-->
+                            <i class="fas fa-star"></i>
                         </div>
                     </div>
                     <!--Comments-->
@@ -221,42 +221,12 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/coming.jpg" />
+                                <img src="images/p2.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>name</strong>
-                                <span>@username</span>
-                            </div>
-                        </div>
-                        <!--reviews------>
-                        <div class="reviews">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i><!--Empty star-->
-                        </div>
-                    </div>
-                    <!--Comments---------------------------------------->
-                    <div class="client-comment">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
-                    </div>
-                </div>
-                <!--BOX-3-------------->
-                <div class="testimonial-box">
-                    <!--top------------------------->
-                    <div class="box-top">
-                        <!--profile----->
-                        <div class="profile">
-                            <!--img---->
-                            <div class="profile-img">
-                                <img src="images/coming.jpg" />
-                            </div>
-                            <!--name-and-username-->
-                            <div class="name-user">
-                                <strong>name</strong>
-                                <span>@username</span>
+                                <strong>Buffa</strong>
+                                <span>@Jumbo</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -270,7 +240,37 @@
                     </div>
                     <!--Comments---------------------------------------->
                     <div class="client-comment">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                        <p>Ich bin sehr überrascht über die ganzen Funktionen der App. In der Preisklasse sind das wirklich Top Produkte!</p>
+                    </div>
+                </div>
+                <!--BOX-3-------------->
+                <div class="testimonial-box">
+                    <!--top------------------------->
+                    <div class="box-top">
+                        <!--profile----->
+                        <div class="profile">
+                            <!--img---->
+                            <div class="profile-img">
+                                <img src="images/p3.jpg" />
+                            </div>
+                            <!--name-and-username-->
+                            <div class="name-user">
+                                <strong>Killian</strong>
+                                <span>@Tanzverbot</span>
+                            </div>
+                        </div>
+                        <!--reviews------>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i><!--Empty star-->
+                        </div>
+                    </div>
+                    <!--Comments---------------------------------------->
+                    <div class="client-comment">
+                        <p>Ich persönlich trage den Ring immer bei mir. Er sieht nicht nur gut aus, sondern rettet mir auch manchmal den Tag mit der NFC Zahlfunktion</p>
                     </div>
                 </div>
                 <!--BOX-4-------------->
@@ -281,12 +281,12 @@
                         <div class="profile">
                             <!--img---->
                             <div class="profile-img">
-                                <img src="images/coming.jpg" />
+                                <img src="images/p4.jpg" />
                             </div>
                             <!--name-and-username-->
                             <div class="name-user">
-                                <strong>Name</strong>
-                                <span>@username</span>
+                                <strong>Chicco</strong>
+                                <span>@Chiccoischef</span>
                             </div>
                         </div>
                         <!--reviews------>
@@ -300,7 +300,7 @@
                     </div>
                     <!--Comments---------------------------------------->
                     <div class="client-comment">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, quaerat quis? Provident temporibus architecto asperiores nobis maiores nisi a. Quae doloribus ipsum aliquam tenetur voluptates incidunt blanditiis sed atque cumque.</p>
+                        <p>Ich habe ein Armband bestellt, welches innerhalb 2 Tagen ankam. Alle meine Freunde haben bereits ein IOA Accessoire und ich kann sie alle auf der Map sehen. Wie cool ist das bitte!</p>
                     </div>
                 </div>
             </div>
@@ -313,15 +313,15 @@
         <div class="box-container">
             <div class="box">
                 <h3>Warum wir?</h3>
-                <p>Unser Wettbewerbsvorteil besteht darin, dass wir Accessoires und Schmuckstücke mit Features wie GPS-Tracking, S.O.S-Funktion, Inventive-Onelife-Dating und Near Field Communication anbieten. 
+                <p>Unser Wettbewerbsvorteil besteht darin, dass wir Accessoires mit Features ausstatten und eine moderne Social Media App anbieten. 
 
                     Kunden und Kundinnen konsumieren bei uns, da wir Accessoires und Schmuckstücke mit Technik kombinieren. </p>
             </div>
             <div class="box">
                 <h3>Links</h3>
                 <a href="shop.html">Online Shop</a>
-                <a href="#">Social Media</a>
-                <a href="#">Impressum</a>
+                <a href="">Social Media</a>
+                <a href="">Impressum</a>
             </div>
             <div class="box">
                 <h3>Kontaktiere uns</h3>
